# AvitoHW

./: .gitignore  HW3.py  README.md  dept_stats.csv  hw2.py  omd.py  pyproject.toml
Final_project/: pizza.py  pizza_test.py  result.txt
HW3/: README.md
HW3/Issue1/: README.md  morse.py  result.txt  run_tests.sh
HW3/Issue2/: morse.py  result.txt  run_tests.sh  test_morse.py
HW3/Issue3/: result.txt  run_tests.sh  test_transform.py
HW3/Issue4/: fit_transform.py  result.txt  run_tests.sh  test_transform_pytest.py
HW3/Issue5/: result.txt  run_tests.sh  year.py  year_py.html
