[tool.poetry]
name = "aaa"
version = "0.1.0"
description = "HomeWork for Avito Academy"
authors = ["Rustem Khutiev <76971769+PhenomenaPh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79