[tool.poetry]
name = "aaa"
version = "0.1.0"
description = "HomeWork for Avito Academy"
authors = ["Rustem Khutiev <76971769+PhenomenaPh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.26.1"
ruff = "^0.1.4"
pytest = "^7.4.3"
flake8 = "^6.1.0"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
indent-width = 4
select = ["E", "F", "W"]
